--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,9 +1,390 @@
+@font-face {
+  font-family: Gotham_Pro;
+  src: url(./../fonts/Gotham_Pro.ttf);
+}
 body {
-  background-color: #626262;
   margin: 0;
   padding: 0;
+  font-family: Gotham_Pro;
+  background-color: darkgrey;
+}
+body *::-webkit-scrollbar {
+  width: 22px;
+}
+::-webkit-scrollbar-track {
+  background: white;
+}
+::-webkit-scrollbar-track-piece {
+  background-color: #cfd8dc;
+  margin: 5px 0 5px 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  background-clip: content-box;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #607d8b;    
+}
+::-webkit-scrollbar-thumb {
+  background: #879fab;
+  border-right: 7px solid white;
+  border-left: 7px solid white;
+}
+/* ===================================== */
+.app .user {
+  width: 656px;
+  height: 600px;
+  background-color: #ffffff;
+  position: relative;
+}
+.app .user .header {
+  width: calc(100% - 16px);
+  background-color: #fbfcfc;
+  font-size: 20px;
+  line-height: 14px;
+  padding: 18px 0 19px 16px;
+  color: #b0bec5;
+  border-bottom: 1px solid #cfd8dc;
+}
+.app .user .avatar {
+  width: 224px;
+  height: 280px;
+  position: absolute;
+}
+.app .user form,
+.app .page form {
+  background-color: white;
+  padding: 16px;
+  width: calc(100% - 32px);
+}
+.app .user form .input_field,
+.app .page form .input_field {
+  color: #b0bec5;
+  position: relative;
+  margin-left: 240px;
+}
+.app .user form .input_field input,
+.app .user form .input_field ul,
+.app .user form .input_field textarea,
+.app .page form .input_field input,
+.app .page form .input_field ul {
+  width: 384px;
+  border: none;
+  border-bottom: 1px solid #b0bec5;
+  outline: none;
+  font-size: 16px;
+  padding: 25px 0 8px 0;
+}
+.app .user form .input_field input:focus,
+.app .user form .input_field input:active,
+.app .user form .input_field textarea:focus,
+.app .user form .input_field textarea:active,
+.app .page form .input_field input:focus,
+.app .page form .input_field input:active {
+  border-bottom: 1px solid #48b;
+}
+.app .user form .input_field textarea {
+  resize: none;
+  width: calc(100% - 32px);
+  height: 124px;
+  font-family: Gotham_Pro;
+  font-size: 16px;
+  line-height: 1.5;
+  padding: 21px 15px 13px 15px;
+  border: 1px solid #b0bec5;
+}
+.app .user form .input_field.typing label,
+.app .page form .input_field.typing label {
+  font-size: 12px;
+  top: 8px;
+  left: 0px;
+}
+.app .user form .input_field.typing input,
+.app .user form .input_field.typing textarea,
+.app .page form .input_field.typing input {
+  color: #48b;
+}
+.app .user form .input_field label,
+.app .page form .input_field label {
+  position: absolute;
+  top: 25px;
+  left: 0px;
+  transition: all, 150ms;
+}
+.app .user form .bdate_form {
+  position: absolute;
+  top: 172px;
+  z-index: 3;
+}
+.app .user form .select {
+  position: absolute;
+  top: 235px;
+}
+.app .user form .textarea_form {
+  position: relative;
+  bottom: -193px;
+  margin-left: 0;
+  margin-top: -1px;
+}
+.app .user form .textarea_form label {
+  position: absolute;
+  top: 2px;
+  left: 16px;
+  font-size: 12px;
+  line-height: 2.33;
+}
+.app .user form .save,
+.app .user form .delete {
+  position: absolute;
+  bottom: 16px;
+  padding: 13px 39px 13px 38px;
+  border: none;
+  font-size: 16px;
+  font-family: Gotham_Pro;
+  outline: none;
+}
+.app .user form .save {
+  right: 176px;
+  padding-left: 28px;
+  padding-right: 28px;
+  background-color: #2196f3;
+  color: white;
+}
+.app .user form .save:hover {
+  background-color: #1e88e5;
+}
+.app .user form .delete {
+  right: 16px;
+  background-color: #eceff1;
+}
+.app .user form .delete:hover {
+  background-color: #e2e6e9;
+}
+.app .user form .input_field ul,
+.app .page form .input_field ul {
+  font-size: 16px;
+  position: relative;
+  z-index: 2;
+  padding: 0;
+  padding-left: 0;
+  list-style: none;
+  background-position-x: 221px;
+  padding-bottom: 6px;
+  color: #263238;
+}
+.app .user form .input_field ul li,
+.app .page form .input_field ul li {
+  margin-right: -1px;
+  padding-left: 14px;
+  padding-bottom: 7px;
+  padding-top: 7px;
+  border-right: 2px solid #2196f3;
+  border-left: 2px solid #2196f3;
+  background-color: white;
+}
+.app .user form .input_field ul > :nth-child(2),
+.app .page form .input_field ul > :nth-child(2) {
+  margin-top: -3px;
+  border-top: 2px solid #2196f3;
+}
+.app .user form .input_field ul li:last-child,
+.app .page form .input_field ul li:last-child {
+  border-bottom: 2px solid #2196f3;
+}
+/* =================== */
+.user form .select.input_field ul #role,
+.page form .select.input_field ul #sort {
+  border-bottom: 1px solid #b0bec5;
+  padding-bottom: 5px;
+}
+.user form .select.input_field ul,
+.page form .select.input_field ul {
+  color: #b0bec5;
+  border: none;
+}
+/* =================== */
+.app .user form .opened_select,
+.app .page form .opened_select {
+  border: none;
+  background: url(./../src/triangle_up.png) no-repeat right transparent;
+}
+.app .user form .closed_select,
+.app .page form .closed_select {
+  color: #aaa;
+  background: url(./../src/triangle_down.png) no-repeat right transparent;
+}
+.app .user form .select .error_color:after {
+  line-height: 1;
+}
+.app .user form .opened_li,
+.app .page form .opened_li {
+  display: block;
+}
+.app .user form .opened_li:hover,
+.app .page form .opened_li:hover {
+  background-color: #eceff1;
+}
+.app .user form .opened_li:active,
+.app .page form .opened_li:active {
+  background-color: #2196f3;
+}
+.app .user form .closed_li,
+.app .page form .closed_li {
+  display: none;
+}
+/* ========================================= */
+.error_color {
+  color: #bb4444 !important;
+  border-color: #bb4444 !important;
+}
+.error_color:after {
+  content: attr(data-title);
+  width: 155px;
+  height: 25px;
+  position: absolute;
+  background: #bb4444;
+  z-index: 999999;
+  top: 60px;
+  left: 56px;
+  border: 1px solid transparent;
+  border-radius: 3px;
+  color: #eeeeee;
+  padding-top: 9px;
+  padding-left: 11px;
+}
+.error_color:before {
+  content: '';
+  width: 16px;
+  height: 16px;
+  position: absolute;
+  background-color: #bb4444;
+  transform: rotate(45deg);
+  left: 132px;
+  top: 53px;
+  z-index: 3;
+}
+.colored_select {
+  color: #48b;
 }
 
-.app {
+/* ============================================ */
+/* ============================================ */
+/* ============================================ */
+/* ============================================ */
 
+.app .page {
+  width: 656px;
+  height: 680px;
+  background-color: #ffffff;
+  position: absolute;
+  z-index: 4;
+  top: 0;
 }
+.app .page form .input_field {
+  margin: 0;
+}
+.app .page form .search_form {
+  position: absolute;
+  top: 0;
+}
+.app .page form .sort {
+  position: absolute;
+  top: 0px;
+  right: 17px;
+}
+.app .page form .input_field input,
+.app .page form .input_field ul {
+  padding: 14px 0 10px 0;
+}
+.app .page form .input_field input {
+  width: 371px;
+  padding: 14px 232px 10px 53px;
+  margin: 0 0 0 -16px;
+}
+.app .page form .input_field ul {
+  width: 199px;
+}
+.app .page form .input_field.typing label {
+  top: 2px;
+  left: 38px;
+}
+.app .page form .input_field label {
+  top: 13px;
+  left: 36px;
+}
+.app .page form .input_field ul {
+  padding: 13px 0px 0 0;
+  border-bottom: none;
+  margin: 0 0 0 0;
+}
+.app .page form .input_field ul > :nth-child(2) {
+  margin-top: 11px;
+}
+.app .page form .input_field ul div,
+.app .page form .input_field ul li {
+  padding-left: 50px;
+}
+.app .page form .input_field ul li {
+  margin-right: -1px;
+  padding-bottom: 14px;
+  padding-top: 11px;
+}
+/* ============================ */
+/* ============================ */
+/* ============================ */
+.app .page .list {
+  margin: 12px 16px 0 16px;
+}
+.app .page .list .item {
+  padding: 16px 0 12px 0;
+  position: relative;
+  border-bottom: 1px solid #b0bec5;
+}
+.app .page .list .item img {
+  width: 144px;
+  height: 180px;
+}
+.app .page .list .item .info {
+  position: absolute;
+  top: 34px;
+  left: 160px;
+  color: #263238;
+}
+.app .page .list .item .info .name {
+  font-size: 24px;
+}
+.app .page .list .item .info .bdate {
+  color: #b0bec5;
+  font-size: 16px;
+  margin-top: 8px;
+}
+.app .page .list .item .info .role {
+  font-size: 16px;
+  margin-top: 25px;
+}
+.app .page .list .item .info .edit {
+  color: white;
+  position: absolute;
+  right: -275px;
+  bottom: -66px;
+  padding: 13px 20px 13px 17px;
+  border: none;
+  font-size: 16px;
+  font-family: Gotham_Pro;
+  outline: none;
+  background-color: #2196f3;
+}
+.app .page .list .item:last-child {
+  border: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
