--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -120,7 +120,7 @@ body *::-webkit-scrollbar {
   left: 0;
   transition: all, 150ms;
 }
-.app .user form .bdate_form {
+.app .user form .birth_date_form {
   position: absolute;
   top: 172px;
   z-index: 3;
@@ -129,13 +129,13 @@ body *::-webkit-scrollbar {
   position: absolute;
   top: 235px;
 }
-.app .user form .textarea_form {
+.app .user form .description_form {
   position: relative;
   bottom: -193px;
   margin-left: 0;
   margin-top: -1px;
 }
-.app .user form .textarea_form label {
+.app .user form .description_form label {
   position: absolute;
   top: 2px;
   left: 16px;
@@ -201,7 +201,7 @@ body *::-webkit-scrollbar {
   border-bottom: 2px solid #2196f3;
 }
 /* =================== */
-.user form .select.input_field ul #role,
+.user form .select.input_field ul #post,
 .page form .select.input_field ul #sort {
   border-bottom: 1px solid #b0bec5;
   padding-bottom: 5px;
@@ -363,12 +363,12 @@ body *::-webkit-scrollbar {
 .app .page .list .item .info .name {
   font-size: 24px;
 }
-.app .page .list .item .info .bdate {
+.app .page .list .item .info .birth_date {
   color: #b0bec5;
   font-size: 16px;
   margin-top: 8px;
 }
-.app .page .list .item .info .role {
+.app .page .list .item .info .post {
   font-size: 16px;
   margin-top: 25px;
 }
