--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -55,27 +55,38 @@ body *::-webkit-scrollbar {
   color: #b0bec5;
   border-bottom: 1px solid #cfd8dc;
 }
+/* ======================== */
+/* ======== IMAGE ========= */
+/* ======================== */
 .app .user .avatar {
   width: 224px;
   height: 280px;
   position: absolute;
 }
 .app .user .new_avatar {
-  opacity: 0;
+  opacity: 1;
   position: absolute;
   width: 224px;
   height: 280px;
   top: 68px;
   left: 16px;
-  background: url(/static/media/refresh.37cb4308.svg);
+  background: url("./../ets/icons/refresh.svg");
   background-repeat: no-repeat;
   background-position: 50% 50%;
   background-color: rgba(128,128,128,0.7);
+  background-size: 40px;
 }
 .app .user .new_avatar:hover {
-  visibility: visible;
   opacity: 1;
-}  
+}
+.app .user form input[type="file"] {
+  position: absolute;
+  visibility: hidden;
+}
+
+/* ======================== */
+/* ======== IMAGE-end ===== */
+/* ======================== */
 .app .user form,
 .app .page form {
   background-color: white;
