--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -64,7 +64,7 @@ body *::-webkit-scrollbar {
   position: absolute;
 }
 .app .user .new_avatar {
-  opacity: 1;
+  opacity: 0;
   position: absolute;
   width: 224px;
   height: 280px;
@@ -75,6 +75,8 @@ body *::-webkit-scrollbar {
   background-position: 50% 50%;
   background-color: rgba(128,128,128,0.7);
   background-size: 40px;
+  transition: opacity 0.3s;
+  cursor: pointer;
 }
 .app .user .new_avatar:hover {
   opacity: 1;
@@ -312,7 +314,7 @@ body *::-webkit-scrollbar {
   transform: rotate(45deg);
   left: 132px;
   top: 53px;
-  z-index: 3;
+  z-index: 4;
 }
 .colored_select {
   color: #48b;
